src/objects/Candidate_Badge__c.object
<CustomObject>
    <fields>
        <fullName>Badge__c</fullName>
        <label>Badge</label>
        <referenceTo>Badge__c</referenceTo>
        <relationshipLabel>Candidate Badges</relationshipLabel>
        <relationshipName>Candidate_Badges</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Candidate_Badges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidate_Email__c</fullName>
        <label>Candidate Email</label>
        <type>Email</type>
    </fields>
    <label>Candidate Badge</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CB-{000000}</displayFormat>
        <label>User Badge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>